<resources>
    <string name="app_name">Safely</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_folder">Folder</string>
    <string name="title_contact">Contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Address</string>
    <string name="contact_list">Contacts List</string>
    <string name="add_contact">Add Contacts</string>
    <string name="set_default_message">Set Default Message</string>
    <string name="active">Running ..</string>
    <string name="save_contact">Save Contact</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="jadikan_utama">Jadikan utama</string>
    <string name="add_timer">Add Timer</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu">Waktu</string>
    <string name="durasi_menit">Durasi (menit)</string>
    <string name="simpan_timer">Simpan Timer</string>
    <string name="set_timer">Set Timer</string>
    <string name="shake_sensitivity">Shake Sensitivity</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="media_saved">Media Saved</string>
    <string-array name="cam_mode">
        <item>Depan</item>
        <item>Belakang</item>
    </string-array>
</resources>