<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:tint="@drawable/icon_color_selector"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_folder"
        android:icon="@drawable/ic_folder"
        android:tint="@drawable/icon_color_selector"
        android:title="@string/title_folder" />

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_setting"
        android:tint="@drawable/icon_color_selector"
        android:title="@string/title_setting" />

    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_contact"
        android:tint="@drawable/icon_color_selector"
        android:title="@string/title_contact" />
</menu>