<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ContactFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_13sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_list"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
            <LinearLayout
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp">
                <ImageView
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:background="@drawable/ic_user_add"
                    android:backgroundTint="@color/black"
                    android:layout_marginEnd="8dp" />
                <TextView
                    android:id="@+id/tvAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_contact"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btnAddFromContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp">
                <ImageView
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:background="@drawable/ic_contact"
                    android:backgroundTint="@color/black"
                    android:layout_marginEnd="8dp" />
                <TextView
                    android:id="@+id/tvAddfromContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Add from Contacts"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btnDefaultMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp">
                <ImageView
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:background="@drawable/ic_message"
                    android:backgroundTint="@color/black"
                    android:layout_marginEnd="8dp" />
                <TextView
                    android:id="@+id/tvDefaultMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/set_default_message"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                tools:listitem="@layout/item_contact"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>