<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HomeFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_13sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_setting"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
            <LinearLayout
                android:id="@+id/btnTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp">
                <ImageView
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:background="@drawable/ic_timer"
                    android:backgroundTint="@color/black"
                    android:layout_marginEnd="8dp" />
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/set_timer"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btnShake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp">
                <ImageView
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:background="@drawable/ic_shake"
                    android:backgroundTint="@color/black"
                    android:layout_marginEnd="8dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/shake_sensitivity"
                        android:textSize="@dimen/_12sdp" />
                    <TextView
                        android:id="@+id/tvShake"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="0"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
            android:visibility="visible">
            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/sbShake"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/cbVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:buttonTint="@color/black"
                android:gravity="center"
                android:text="Video"
                android:textSize="@dimen/_12sdp" />
            <CheckBox
                android:id="@+id/cbAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:buttonTint="@color/black"
                android:gravity="center"
                android:text="Audio"
                android:textSize="@dimen/_12sdp" />
            <CheckBox
                android:id="@+id/cbPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:buttonTint="@color/black"
                android:gravity="center"
                android:text="Photo"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
            <LinearLayout
                android:id="@+id/btnScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp">
                <ImageView
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:background="@drawable/ic_phone"
                    android:backgroundTint="@color/black"
                    android:layout_marginEnd="8dp" />
                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/keep_screen_on"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/swScreen"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Default Camera Mode"
                    android:textSize="@dimen/_12sdp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_button_background"
                        android:backgroundTint="@color/white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:src="@drawable/ic_camera"
                            android:layout_gravity="center_vertical"
                            android:backgroundTint="@color/white"
                            android:background="@drawable/background_rounded_blue"
                            android:layout_marginRight="@dimen/_5sdp" />

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/spMode"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:spinnerMode="dropdown"
                            android:background="@null" />

                    </LinearLayout>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>